# JNILogger_C_Linux

./: CMakeLists.txt  Message.cpp
headers/: Message.h
